--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="profile">
       <img height="200" width="200" src="images/areolawedding.png" alt="profile-picture">
       <h2 class="profile-head">Hi.</h2>
-      <p class="intro">I am a self-learning web developer! And although I am new to this, I heart web development. I also love photography and spending quality time with my little family!</p>
+      <p class="intro">I am a self-learning web developer! And although I am new to this, I love web development. I also love photography and spending quality time with my little family!</p>
     </div>
   </div>
 
